--- a/humm-sdk/build.gradle
+++ b/humm-sdk/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-version = "0.1.0"
+def versionNumber = "0.1.1"
 
 ext {
     bintrayRepo = 'maven'
@@ -20,7 +20,7 @@ ext {
     siteUrl = 'https://github.com/myhumm/humm-android-sdk'
     gitUrl = 'https://github.com/myhumm/humm-android-sdk.git'
 
-    libraryVersion = version
+    libraryVersion = versionNumber
 
     developerId = 'josealonsogarcia'
     developerName = 'Jose Alonso Garcia'
@@ -39,9 +39,9 @@ bintray {
         name = 'humm-sdk'
 
         version {
-            name = version
+            name = versionNumber
             desc = 'First version'
-            vcsTag = version
+            vcsTag = versionNumber
         }
 
         licenses = ['MIT']
@@ -51,6 +51,7 @@ bintray {
     configurations = ['archives']
 }
 
+project.version = versionNumber;
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
