--- a/humm-sdk/build.gradle
+++ b/humm-sdk/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-def versionNumber = "0.1.2"
+def versionNumber = "0.1.3"
 
 ext {
     bintrayRepo = 'maven'
@@ -40,7 +40,7 @@ bintray {
 
         version {
             name = versionNumber
-            desc = 'First version'
+            desc = 'Bug fixes'
             vcsTag = versionNumber
         }
 
