--- a/humm-sdk/build.gradle
+++ b/humm-sdk/build.gradle
@@ -65,7 +65,7 @@ artifacts {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 15
